# neuralstoc

./: .gitignore  Dockerfile  Dockerfile-sim  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: checkpoints_smoke_test.py  commands.sh  commands_final_loop.sh  commands_first_loop.sh  config.yaml  rsm_loop.py  smoke_test.sh  table1_baseline_final_loop.sh  table1_baseline_first_loop.sh  table1_baseline_full.sh  table1_neuralstoc_final_loop.sh  table1_neuralstoc_first_loop.sh  table1_neuralstoc_full.sh  table2_baseline_final_loop.sh  table2_baseline_first_loop.sh  table2_baseline_full.sh  table2_neuralstoc_final_loop.sh  table2_neuralstoc_first_loop.sh  table2_neuralstoc_full.sh
scripts/checkpoints/: cavoid_new_reach_avoid_loop_0.jax  cavoid_new_reach_avoid_loop_4.jax  cavoid_new_stability_loop_0.jax  cavoid_new_stability_loop_16.jax  cavoid_new_stability_loop_16_obs_normalization.jax  cavoid_old_reach_avoid_loop_0.jax  cavoid_old_reach_avoid_loop_12.jax  human2_new_reach_avoid_loop_0.jax  human2_new_reach_avoid_loop_0_obs_normalization.jax  human2_new_reach_avoid_loop_31.jax  lds_new_reach_avoid_loop_0.jax  lds_new_reach_avoid_loop_15.jax  lds_new_reach_avoid_loop_15_obs_normalization.jax  lds_new_stability_loop_0.jax  lds_new_stability_loop_1.jax  lds_old_reach_avoid_loop_0.jax  lds_old_reach_avoid_loop_5.jax  lds_old_reach_avoid_loop_5_obs_normalization.jax  lds_old_stability_loop_0.jax  lds_old_stability_loop_0_obs_normalization.jax  lds_old_stability_loop_5.jax  ldss4_new_stability_loop_0.jax  ldss4_new_stability_loop_14.jax  pend_new_stability_loop_0.jax  (+14 more)
(+21 files in other folders)
